--- a/login/login.css
+++ b/login/login.css
@@ -18,7 +18,7 @@ nav ul {
 
 nav li {
     display: inline;
-    margin-right: 20px;
+    margin: 0 15px;
 }
 
 nav a {
@@ -83,7 +83,7 @@ input {
 }
 
 #icon {
-    background: url(show.png);
+    background: url(/GameShare/login/show.png);
     background-size: cover;
     position: relative;
     width: 25px;
@@ -95,7 +95,7 @@ input {
 /*Javascript*/
 
 #icon.hide {  
-    background: url(hide.png);
+    background: url(/GameShare/login/show.png);
     background-size: cover;
 }
 
